--- a/demo.ini
+++ b/demo.ini
@@ -23,8 +23,9 @@
             en = The file '%@' could not be found.
             tags = app1,app6
             comment = An error describing when a path on the filesystem could not be found.
-        [network_unavailable_error]
+        [network_unavailable_error]v
             en = The network is currently unavailable.
+            es = La red no esta disponible.
             tags = app1
             comment = An error describing when the device can not connect to the internet.
         [dismiss_error]
