--- a/demo.ini
+++ b/demo.ini
@@ -31,6 +31,7 @@
         [dismiss_error]
             ref = yes
             en = Dismiss
+            es = Cerrar
 
     [[Escaping Example]]
         [list_item_separator]
