--- a/demo.ini
+++ b/demo.ini
@@ -23,7 +23,7 @@
             en = The file '%@' could not be found.
             tags = app1,app6
             comment = An error describing when a path on the filesystem could not be found.
-        [network_unavailable_error]v
+        [network_unavailable_error]
             en = The network is currently unavailable.
             es = La red no esta disponible.
             tags = app1
