--- a/demo.ini
+++ b/demo.ini
@@ -1,40 +1,50 @@
 [[Android]]
 	[app_name]
 		en = Demo twine.
+		es = Demo twine.
 	[demo]
 		en = This is a demo
+		es = Esto es una demo
 	[new_string]
 		en = Demo twine.
+		es = Demo twine.
 
 [[General]]
 	[yes]
 		en = Yes
 		fr = Oui
 		ja = はい
+		es = Sí
 	[no]
 		en = No
 		fr = Non
 		ja = いいえ
+		es = No
 
 [[Errors]]
 	[path_not_found_error]
 		en = The file '%@' could not be found.
 		tags = app1,app6
 		comment = An error describing when a path on the filesystem could not be found.
+		es = No se encontró el archivo '%@'.
 	[network_unavailable_error]
 		en = The network is currently unavailable.
 		tags = app1
 		comment = An error describing when the device can not connect to the internet.
+		es = La red no está disponible.
 	[dismiss_error]
 		en = Dismiss
 		ref = yes
+		es = Yes
 
 [[Escaping Example]]
 	[list_item_separator]
 		en = `, `
 		tags = mytag
 		comment = A string that should be placed between multiple items in a list. For example: Red, Green, Blue
+		es = `, `
 	[grave_accent_quoted_string]
 		en = ``%@``
 		tags = myothertag
 		comment = This string will evaluate to `%@`.
+		es = ``%@``
