--- a/demo.ini
+++ b/demo.ini
@@ -1,40 +1,62 @@
 [[Android]]
 	[app_name]
 		en = Demo twine.
+		an = Demo twine.
+		de = Demo twine.
 		es = Demo twine.
+		jp = Demo twine.
 	[demo]
 		en = This is a demo
+		an = This is a demo
+		de = This is a demo
 		es = Esto es una demo
+		jp = This is a demo
 	[new_string]
 		en = Demo twine.
+		an = Demo twine.
+		de = Demo twine.
 		es = Demo twine.
+		jp = Demo twine.
 
 [[General]]
 	[yes]
 		en = Yes
+		an = Yes
+		de = Ja
+		es = Sí
 		fr = Oui
 		ja = はい
-		es = Sí
+		jp = Yes
 	[no]
 		en = No
+		an = No
+		de = No
+		es = No
 		fr = Non
 		ja = いいえ
-		es = No
+		jp = No
 
 [[Errors]]
 	[path_not_found_error]
 		en = The file '%@' could not be found.
 		tags = app1,app6
 		comment = An error describing when a path on the filesystem could not be found.
+		an = The file '%@' could not be found.
+		de = The file '%@' could not be found.
 		es = No se encontró el archivo '%@'.
+		jp = The file '%@' could not be found.
 	[network_unavailable_error]
 		en = The network is currently unavailable.
 		tags = app1
 		comment = An error describing when the device can not connect to the internet.
+		an = The network is currently unavailable.
+		de = The network is currently unavailable.
 		es = La red no está disponible.
+		jp = ネットワークは現在利用できません。
 	[dismiss_error]
 		en = Dismiss
 		ref = yes
+		de = Yes
 		es = Yes
 
 [[Escaping Example]]
@@ -42,9 +64,15 @@
 		en = `, `
 		tags = mytag
 		comment = A string that should be placed between multiple items in a list. For example: Red, Green, Blue
+		an = `, `
+		de = `, `
 		es = `, `
+		jp = `, `
 	[grave_accent_quoted_string]
 		en = ``%@``
 		tags = myothertag
 		comment = This string will evaluate to `%@`.
+		an = ``%@``
+		de = ``%@``
 		es = ``%@``
+		jp = ``%@``
