Network error japanese translation

--- a/demo.ini
+++ b/demo.ini
@@ -44,7 +44,7 @@
 		an = The file '%@' could not be found.
 		de = The file '%@' could not be found.
 		es = No se encontró el archivo '%@'.
-		jp = The file '%@' could not be found.
+		jp = ファイル '％@'は見つかりませんでした。
 	[network_unavailable_error]
 		en = The network is currently unavailable.
 		tags = app1
