--- a/demo.ini
+++ b/demo.ini
@@ -10,7 +10,7 @@
 		an = This is a demo
 		de = This is a demo
 		es = Esto es una demo
-		jp = これはデモです
+		jp = これはデモ
 	[new_string]
 		en = Demo twine.
 		an = Demo twine.
