--- a/demo.ini
+++ b/demo.ini
@@ -15,7 +15,7 @@
 		en = Demo twine.
 		an = Demo twine.
 		de = Demo twine.
-		es = Demo twine.
+		es = Esto es una demo
 		jp = デモツイン。
 
 [[General]]
