Added new string

--- a/demo.ini
+++ b/demo.ini
@@ -5,6 +5,8 @@
 		de = Demo twine.
 		es = Demo twine.
 		jp = Demo twine.
+	[new_string]
+		en = New String.
 	[demo]
 		en = This is a demo
 		an = This is a demo
