Changed string name

--- a/demo.ini
+++ b/demo.ini
@@ -5,8 +5,8 @@
 		de = Demo twine.
 		es = Demo twine.
 		jp = Demo twine.
-	[new_string]
-		en = New String.
+	[this_is_a_new_string]
+		en = This is a new string.
 	[demo]
 		en = This is a demo
 		an = This is a demo
