--- a/demo.ini
+++ b/demo.ini
@@ -54,13 +54,13 @@
 		comment = An error describing when the device can not connect to the internet.
 		an = The network is currently unavailable.
 		de = The network is currently unavailable.
-		es = La red no está disponible.
+		es = La red no está disponible o tal vez si.
 		jp = ネットワークは現在利用できません。
 	[dismiss_error]
 		en = Dismiss
 		ref = yes
 		de = Yes
-		es = Yes
+		es = Si
 		jp = Yes
 
 [[Escaping Example]]
