--- a/demo.ini
+++ b/demo.ini
@@ -8,77 +8,17 @@
 	[this_is_a_new_string]
 		en = This is a new string.
 		es = Esto es una nueva cadena.
-	[demo]
-		en = This is a demo
-		an = This is a demo
-		de = This is a demo
-		es = Esto es una demo.
-		jp = これはデモ
-	[new_string]
-		en = Demo twine.
-		an = Demo twine.
-		de = Demo twine.
-		es = Demo twine.
-		jp = デモツイン。
-	[new_string_b]
-		en = Demo twine.
 
-[[General]]
-	[yes]
-		en = Yes
-		an = Yes
-		de = Ja
-		es = Sí
-		fr = Oui
-		ja = はい
-		jp = はい
-	[no]
-		en = No
-		an = No
-		de = No
-		es = No
-		fr = Non
-		ja = いいえ
-		jp = いいえ
-
-[[Errors]]
-	[path_not_found_error]
-		en = The file '%@' could not be found.
-		tags = app1,app6
-		comment = An error describing when a path on the filesystem could not be found.
-		an = The file '%@' could not be found.
-		de = The file '%@' could not be found.
-		es = No se ha encontrado el archivo '%@'.
-		jp = ファイル '％@'は見つかりませんでした。
-	[network_unavailable_error]
-		en = The network is currently unavailable.
-		tags = app1
-		comment = An error describing when the device can not connect to the internet.
-		an = The network is currently unavailable.
-		de = The network is currently unavailable.
-		es = The network is currently unavailable.
-		jp = ネットワークは現在利用できません。
-	[dismiss_error]
-		en = Dismiss
-		ref = yes
-		de = Yes
-		es = Yes
-		jp = Yes
-
-[[Escaping Example]]
-	[list_item_separator]
-		en = `, `
-		tags = mytag
-		comment = A string that should be placed between multiple items in a list. For example: Red, Green, Blue
-		an = `, `
-		de = `, `
-		es = `, `
-		jp = `, `
-	[grave_accent_quoted_string]
-		en = ``%@``
-		tags = myothertag
-		comment = This string will evaluate to `%@`.
-		an = ``%@``
-		de = ``%@``
-		es = ``%@``
-		jp = ``%@``
+[[Repository Strings]]
+	[repo_name]
+		en = Repository name
+		es = Nombre del repositorio
+	[owner_title]
+		en = Owner
+		es = Dueño
+	[star_format]
+		en = %s stars
+		es = %s estrellas
+	[network_error]
+		en = Network error.
+		es = Error de red.
